@@ -1,5 +1,6 @@
 2011-01-04  Xavier Perseguers  <typo3@perseguers.ch>
 
+	* [BUGFIX] #11857: Directories with spaces in name cannot be used
 	* New Year cleanup
 
 2010-10-20  Xavier Perseguers  <typo3@perseguers.ch>
